--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,13 +57,13 @@ jobs:
     docker:
       - image: $UW_DOCKER_REGISTRY/tools/kube-deploy:latest
         auth:
-          username: core
+          username: $DOCKER_ID
           password: $DOCKER_PASSWORD
     steps:
         - run:
             command: TAG=$CIRCLE_SHA1 IMAGE=$UW_DOCKER_REGISTRY/$NAMESPACE/$SERVICE /run.sh
             environment:
-              RESTRICT_NAMESPACE: labs
+              RESTRICT_NAMESPACE: smartmetering
 
 workflows:
   version: 2
