--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   test: &test
     working_directory: /go/src/github.com/utilitywarehouse/health-aggregator
     docker:
-    - image: circleci/golang:1.10
+    - image: circleci/golang:1.11
     - image: mongo:3.6
     steps:
       - checkout
@@ -26,9 +26,11 @@ jobs:
     <<: *test
 
   build-intermediate:
+    environment:
+      GO111MODULE: on
     working_directory: /go/src/github.com/utilitywarehouse/health-aggregator
     docker:
-    - image: circleci/golang:1.9
+    - image: circleci/golang:1.11
     steps:
       - setup_remote_docker:
           version: 17.06.0-ce
@@ -37,9 +39,11 @@ jobs:
       - run: make ci-docker-create-intermediate
 
   build-latest:
+    environment:
+      GO111MODULE: on
     working_directory: /go/src/github.com/utilitywarehouse/health-aggregator
     docker:
-    - image: circleci/golang:1.10
+    - image: circleci/golang:1.11
     steps:
       - setup_remote_docker:
           version: 17.06.0-ce
