--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run:
           name: Wait for db
           command: dockerize -wait tcp://localhost:27017 -timeout 1m
-      - run: make lint test
+      - run: make test
       - persist_to_workspace:
           root: .
           paths: .
